# application/services/custom_services/test/src/swagger/swagger.yaml
@@ -13,11 +13,30 @@ info:
       name: Apache 2.0
       url: https://www.apache.org/licenses/LICENSE-2.0.html
 servers:
-   - url: http://localhost:8006
+   - url: http://localhost:8007
      description: test
 tags:
 - name: test
 paths:
+   "/test/get/update":
+      put:
+         tags:
+         -  test
+         description: GpSearchForUpdate
+         requestBody:
+            content:
+               application/json:
+                  schema:
+                     $ref: "#/components/schemas/test"
+         responses:
+            200:
+               description: Success
+            400:
+               description: Bad Request
+            404:
+               description: Not Found
+            500:
+               description: Internal Server Error
    "/test/{id}":
       delete:
          tags:
@@ -26,6 +45,26 @@ paths:
          parameters:
          -  in: "path"
             description: GpDelete
+            name: id
+            required: true
+            schema:
+               type: "string"
+         responses:
+            200:
+               description: Success
+            400:
+               description: Bad Request
+            404:
+               description: Not Found
+            500:
+               description: Internal Server Error
+      get:
+         tags:
+         -  test
+         description: GpGetNounById
+         parameters:
+         -  in: "path"
+            description: GpGetNounById
             name: id
             required: true
             schema:
